jenkins modified : Test CORE jenkins